# projeto-fase-4

./: .gitignore  README  README.md  docker-compose.yaml  dockerfile  pyproject.toml  script.py
api/: .dockerignore  pyproject.toml
api/modelo/: best.pt  best_pareto_lstm.pt
api/src/: main_api.py  script.py
api/src/model/: inference.py
pipeline/: __init__.py  config.py  loader.py  main_infer.py  main_optuna.py  main_train.py  optuna_study.db  requirements.txt
pipeline/data/: 1_source_yahoo.py
pipeline/main_optuna_result/: optuna_study.db
pipeline/model/: 1_lstm.py
pipeline/preprocessing/: 1_integrity.py  3_windowing.py
pipeline/training/: 1_train.py  2_evaluate.py  3_checkpointing.py  4_optuna_hpo.py  5_main_train.py  6_main_optuna.py  7_main_train_only.py  8_inference.py  inference.py
scrip_test_api/: script.py
scrip_test_api/data/: BTC-USD_historico_completo.csv
src/: main.py  main_api.py  main_optuna.py  main_train.py
src/lstm/: lstm.py
src/middleware/: response_time.py
src/preprocessing/: 2_normalization.py
src/training/: 1_train.py  2_evaluate.py  3_checkpointing.py  4_optuna_hpo.py  5_main_train.py  6_main_optuna.py  7_main_train_only.py  8_inference.py  inference.py
