[project]
name = "lstm-fase-4"
version = "0.1.0"
description = "Projeto fase 4"
authors = [
    {name = "igormartsan, senrajudson"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.127.0,<0.128.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
