[project]
name = "lstm-fase-4"
version = "0.1.0"
description = "Projeto fase 4"
authors = [
    {name = "igormartsan, senrajudson"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.127.0,<0.128.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "yfinance (>=1.0,<2.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "optuna-dashboard (>=0.20.0,<0.21.0)",
    "starlette (>=0.50.0,<0.51.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
[tool.poetry.dependencies]
torch = {source = "pytorch-cu121"}
torchvision = {source = "pytorch-cu121"}
torchaudio = {source = "pytorch-cu121"}
